# hydraad

./: .gitignore  Cargo.toml  README.md  usage.txt
src/: app.rs  main.rs  rustls.rs  sspi_client.rs
src/cli/: command_manager.rs  hydraad_prompt.rs  mod.rs
src/cli/commands/: clear.rs  exit.rs  mod.rs
src/cli/commands/creds/: add.rs  list.rs  load_file.rs  mod.rs  remove.rs  save_file.rs  use.rs
src/cli/commands/dc/: add.rs  list.rs  mod.rs  use.rs
src/cli/commands/kerberos/: brute.rs  mod.rs  tgs.rs  tgt.rs
src/cli/commands/smb/: list.rs  mod.rs  shares.rs
src/data/: credential.rs  domain_controller.rs  mod.rs
src/protocols/: mod.rs  smb.rs
src/stores/: credentials_store.rs  domain_controller_store.rs  mod.rs
src/utils/: cli_utils.rs  dns_operations.rs  mod.rs
