[package]
name = "hydraad"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive"] }
colored = "3.0.0"
comfy-table = "7.1.1"
crossterm = "0.29.0"
ldap3 = "0.12.1"
log = "0.4.28"
reedline = "0.43.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shlex = "1.3.0"
tokio = { version = "1.48.0", features = ["rt", "macros", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["v4"] }
winston = "0.7.1"
openssl = { version = "0.10", features = ["vendored"] }