[package]
name = "hydraad"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive"] }
colored = "3.0.0"
comfy-table = "7.1.1"
crossterm = "0.29.0"
ldap3 = "0.12.1"
log = "0.4.28"
reedline = "0.43.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shlex = "1.3.0"
tokio = { version = "1.48.0", features = ["rt", "macros", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["v4"] }
openssl = { version = "0.10", features = ["vendored"] }
himmelblau_kerbeiros = "0.4.1"
ascii = "1.1.0"
himmelblau_kerberos_crypto = "0.4.1"
ntlm-hash = "0.1.0"
himmelblau_kerberos_ccache = "0.4.1"
base64 = "0.22.1"
himmelblau_kerberos_constants = "0.4.1"
smb = { git = "https://github.com/mentalrob/smb-rs.git", branch = "136-bug-cant-build-on-windows", features = ["kerberos"]}
smb-rpc = { git = "https://github.com/mentalrob/smb-rs.git", branch = "136-bug-cant-build-on-windows", package="smb-rpc"}
sspi = "0.18.0"
env_logger = "0.11.8"
byteorder = "1.5.0"
url = "2.5.7"
portpicker = "0.1.1"
reqwest = { version = "0.12.24", features = ["blocking"] }
rustls = "0.23.34"
anyhow = "1.0.100"
trust-dns-resolver = "0.23.2"
